k8s/frontend_deploymant.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  namespace: chat-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      tolerations:
        - key: dedicated
          operator: Equal
          value: apps-dev
          effect: NoSchedule
      nodeSelector:
        component: apps-dev
      containers:
      - name: chat-app-frontend
        image: ankushgudu/chat-app-frontend:latest
        ports:
        - containerPort: 80
