k8s/mongodb_deploymant.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb-pod
  namespace: chat-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
      - name: mongodb-pod
        image: mongo:latest
        ports:
        - containerPort: 27017
        volumeMounts:
        - name: mongo-data
          mountPath: data/mongodb
    volumes:
    - name: mongo-data
      persistentVolumeClaim:
        claimName: mongodb-pvc
