k8s/frontend_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp
  namespace: chat-app
spec:
  selector:
    app: frontend
  ports:
  - port: 80
    targetPort: 80
